--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "firebase": "^10.12.4",
+    "openai": "^4.53.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.1.2",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
@@ -36,7 +39,9 @@
     ]
   },
   "devDependencies": {
+    "@reduxjs/toolkit": "^2.2.6",
     "ajv": "^7.2.4",
+    "react-router-dom": "^6.25.1",
     "tailwindcss": "^3.4.6"
   }
 }
